--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
       "assets/*": ["src/assets/*"],
       "boot/*": ["src/boot/*"],
       "stores/*": ["src/stores/*"],
-      "network/*": ["src/stores/*"],
-      "utils/*": ["src/stores/*"]
+      "network/*": ["src/network/*"],
+      "utils/*": ["src/utils/*"]
     }
   },
   "include": [
